fixed button .label text alignment issue

--- a/app-dev/styles/base/base.css
+++ b/app-dev/styles/base/base.css
@@ -114,8 +114,9 @@ button {
 	cursor: pointer;
 	}
 
-	[role="button"] > .label,
+	*[role="button"] > .label,
 	button > .label {
+		display: block;
 		font-size: inherit;
 		text-align: center;
 	}
